# evoid-plugins

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-plugins.yml
scripts/: publish-scheduler.sh
skills/evoid-plugins/: SKILL.md
skills/evoid-plugins/references/: contracts.md  plugins.md  troubleshooting.md
skills/evoid-plugins/scripts/: validate_plugin.py
